fix alignment for sections

--- a/index.css
+++ b/index.css
@@ -3,9 +3,15 @@ main {
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 200px;
+    padding-bottom: 100px;
     max-width: 100vw;
     overflow-x: hidden;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 a {
